force-app/main/default/objects/KPIapp__Error_Log__c/fields/KPIapp__Dump__c.field-meta.xml
<CustomField>
    <fullName>KPIapp__Dump__c</fullName>
    <label>Dump</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>