force-app/main/default/objects/KPIapp__Error_Log__c/fields/KPIapp__Location__c.field-meta.xml
<CustomField>
    <fullName>KPIapp__Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>