force-app/main/default/objects/KPIapp__Error_Log__c/fields/KPIapp__Message__c.field-meta.xml
<CustomField>
    <fullName>KPIapp__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>