force-app/main/default/objects/KPIapp__Error_Log__c/fields/KPIapp__Type__c.field-meta.xml
<CustomField>
    <fullName>KPIapp__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>